2003-03-14 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/gdcmUtils.cxx : redifinition of defaults parameters in code

2003-03-12 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * gdcmPython/__init__.py fix of GDCM_DICT_PATH which was not
        to exported to the environement (see gdcmPython/testSuite.py
        for usage).
      * src/gdcmElValSet.[cxx/h], gdcmElValue.[cxx/h], gdcmFile.[cxx/h],
        gdcmHeader.[cxx/h]: ElValSet class renamed to gdcmElValSet, and
        ElValue class renamed to gdcmElValue for obvious consistency reasons.
      * src/gdcmElValSet.cxx, src/gdcmUtil.[cxx-h] Tokenize utility function
        moved away from gdcmElValSet.cxx to gdcmUtil.cxx.

2003-03-10 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * gdcmPython/__init__.py doesn't crash anymore when running in
        in InstallMode or PreInstallMode but with an environement given
        value of GDCM_DICT_PATH.
      * src/gdcmDictSet.[cxx/h] coding style.

2003-03-06 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.h and gdcmHeader.cxx Coding style + doxigenation.
      * src/gdcm.h general comments moved to TODO, and README
      * src/gdcm.h should now be seen as a user commodity (including it
        should suffice to fully use gdcm). It is nowhere including within
        any of the kernel files src/*.cxx and src/*.h.

2003-03-05 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h splitted in gdcmCommon.h, gdcmDict.h, gdcmDictEntry.h,
        gdcmDictSet.h, gdcmElValSet.h, gdcmElValue.h, gdcmFile.h,
        gdcmHeader.h
      * src/gdcm*.cxx only include their corresponding include file
        (as opposed to gdcm.h)
      * gdcmPython/gdcm.i changed accordingly
      * Test/Makefile.am corrected and added NEWS, AUTHORS in order for
        the autogen.sh generated "make snapshot" command to work.
      * autogen.sh removed history related references to crea package.

2003-03-04 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>