@@ -1,2 +1,4 @@
-dictsdir = $(prefix)/dicts
+dictsdir = $(datadir)/gdcm
 dicts_DATA = dicomV3.dic README
+
+EXTRA_DIST = dicomV3.dic
